force-app/main/default/objects/cgcloud__Transaction_Log__c/cgcloud__Transaction_Log__c.object-meta.xml
<CustomObject>
    <description>Contains all the transaction log messages related to CG Cloud</description>
    <label>Transaction Log</label>
    <nameField>
        <label>Transaction Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>