force-app/main/default/objects/cgcloud__Transaction_Log__c/fields/cgcloud__Duration__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Duration__c</fullName>
    <description>Duration of the call</description>
    <label>Duration</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>