force-app/main/default/objects/cgcloud__Transaction_Log__c/fields/cgcloud__Source_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Source_Name__c</fullName>
    <description>Name of the calling class</description>
    <label>Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>