force-app/main/default/objects/cgcloud__Transaction_Log__c/fields/cgcloud__Source_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Source_Type__c</fullName>
    <description>From which source it is calling</description>
    <label>Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>