force-app/main/default/objects/cgcloud__Transaction_Log__c/fields/cgcloud__Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transaction_Id__c</fullName>
    <description>Transaction under which the message was logged</description>
    <label>Transaction Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>